Reduce build and runtime warnings